fixed toolbar z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,5 +27,5 @@ body {
 }
 
 .rental__toolbar {
-    z-index: 1;
+    z-index: 2;
 }
